# agent-router-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: agents.json  llm-tags.json  rules.json
docs/: lmstudio-backend.md
scripts/: build-all.sh
src/: classifier.rs  lib.rs  main.rs  model_manager.rs  rules.rs  types.rs
tests/: integration_test.rs
