[package]
name = "agent-router-mcp"
version = "0.1.2"
edition = "2021"
authors = ["Agent Router MCP Contributors"]
description = "A stateless, config-driven Model Context Protocol (MCP) server that intelligently routes requests to specialized AI subagents"
repository = "https://github.com/yourusername/agent-router-mcp"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "agent", "router", "ai", "ollama"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "agent_router_mcp"
path = "src/lib.rs"

[[bin]]
name = "agent-router-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
rust-mcp-sdk = { version = "0.8.3", features = ["server", "stdio", "macros"] }
async-trait = "0.1"
lazy_static = "1.5"

[dev-dependencies]
wiremock = "0.6"
serial_test = "3"
